Fixed the paragraph not showing error

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,13 +1,13 @@
 h1 a, h2 a {
-    color: #C25100;
+    color: #E06CF5;
     font-family: 'Lobster';
 }
 body {
-    padding-left: 15px;
+    padding-left: 0;
 }
 
 .page-header {
-    background-color: #C25100;
+    background-color: #E06CF5;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -16,6 +16,7 @@ body {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+        text-align: center;
 }
 
 .content {
@@ -49,6 +50,6 @@ h1, h2, h3, h4 {
     margin-bottom: 70px;
 }
 
-.post h2 a, .post h2 a:visited {
-    color: #000000;
+.post h1 a, .post h1 a:visited {
+    color: #E06CF5;
 }
